# godocs-jinja

./: LICENSE  README.md  pyproject.toml
src/godocs_jinja/: main.py
src/godocs_jinja/cli/: __init__.py  command.py
src/godocs_jinja/constructor/: __init__.py  constructor.py
src/godocs_jinja/constructor/models/: __init__.py
src/godocs_jinja/constructor/models/rst/: __init__.py  filters.py
src/godocs_jinja/constructor/models/rst/templates/class/: constant_descriptions.jinja  description.jinja  enum_descriptions.jinja  heading.jinja  index.jinja  method_descriptions.jinja  method_index.jinja  property_descriptions.jinja  property_index.jinja  signal_descriptions.jinja
src/godocs_jinja/constructor/models/rst/templates/index/: index.jinja
tests/constructor/: test_constructor.py
