[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
godocs = ["constructor/jinja_constructor/models/**/*.jinja"]

[project]
name = "godocs-jinja"
version = "0.1.0"
authors = [
  { name="Daniel Sousa (nadjiel)", email="oliveira.daaaaniel@gmail.com" },
]
description = "CLI tool for converting Godot's XML docs into RST Markdown"
keywords=[ "python", "godot", "documentation", "docs", "godocs", "sphinx", "jinja2" ]
readme = "README.md"
license = "MIT"
requires-python = ">=3.0"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Natural Language :: English",
]
dependencies = [
  "godocs", 
  "jinja2 >= 3.1.6, < 4.0.0",
]

[project.entry-points."godocs.plugins"]
jinja = "godocs-jinja.main:Plugin"

[project.optional-dependencies]
dev = [
  "build",
  "twine",
  "pytest >= 8.4.1, < 9.0.0",
]

[project.urls]
Homepage = "https://github.com/godocs-godot/godocs"
Issues = "https://github.com/godocs-godot/godocs/issues"
